AbilitySystemGlobals & different damage types

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=092CCE4343E986D843529F8C2914EF04
 CopyrightNotice=Rouge
@@ -111,3 +109,5 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/FantasyBundle/Maps/Demonstration_Castle")
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
++AbilitySystemGlobalsClassName="/Script/Rouge.RougeAbilitySystemGlobals"
