--- a/Rouge.uproject
+++ b/Rouge.uproject
@@ -11,7 +11,8 @@
 			"AdditionalDependencies": [
 				"PaperZD",
 				"GameplayAbilities",
-				"Engine"
+				"Engine",
+				"Niagara"
 			]
 		}
 	],
